# vim-cmake

./: CMakeLists.txt  README.md  cmake.vim  test.vim  test2.vim  window.vim
autoload/cv/: App.vim  Breakpoint.vim  CMakeState.vim  Target.vim  TypeInfo.vim
plugin/: NewCMake.vim  cmake.vim  test.py
